<resources>
    <string name="app_name">App de Camilo</string>
    <string name="login_title">La App de Camilo</string>
    <string name="name_hint">Ingrese su nombre</string>
    <string name="password_hint">Ingrese su contaseña</string>
    <string name="enter">Entrar</string>
    <string name="calc_avg">Calcular promedio</string>
    <string name="calculate">Calcular</string>
    <string name="zero_avg">Promedio = 0</string>
    <string name="back">Regresar</string>
    <string name="first_number">Ingrese el primer número</string>
    <string name="second_number">Ingrese el segundo número</string>
    <string name="avg_equals">Promedio = %1$s</string>
    <string name="avg_error">Promedio = ERROR</string>
    <string name="test_form">FORMULARIO DE PRUEBA</string>
    <string name="person_data">Datos personales</string>
    <string name="name">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="hint_lastname">Escriba su apellido</string>
    <string name="address">Dirección</string>
    <string name="hint_address">Escriba su dirección</string>
    <string name="phone">Teléfono</string>
    <string name="hint_phone">Escriba su teléfono</string>
    <string name="birthday">Fecha nacimiento</string>
    <string name="hint_birthday">Elija fecha nacimiento</string>
    <string name="clean">Limpiar</string>
    <string name="save">Guardar</string>
    <string name="form">Formulario</string>
    <string name="contacts">Contactos</string>
    <string name="do_order">Realizar Pedido</string>
    <string name="orders">Pedidos</string>
    <string name="chicken">Pollo</string>
    <string name="salami">Salami</string>
    <string name="ham">Jamón</string>
    <string name="strOrderBase">Pedido realizado con los siguientes ingredientes: </string>
    <string name="special_pizza">Pizza especial</string>
    <string name="home_pizza">Deliciosa pizza de la casa</string>
    <string name="pizza_description">Pizza de carnes especialmente preparada por el restaurante a partir de los ingredientes seleccionados.</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="exit">Salir</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="update_contact">Actualizar contacto</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="user_name">Nombre usuario</string>
    <string name="password">Contraseña</string>
</resources>